fix: z-index drawer-menu

--- a/src/css/drawer.css
+++ b/src/css/drawer.css
@@ -244,6 +244,7 @@ body * {
   margin: 0;
   padding: 0.5rem;
   border-radius: var(--drawer-border-radius);
+  z-index: 2;
   background-color: #fff;
   box-shadow:
     rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
